# LLM-provider-sdk

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PRICING_MIGRATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.2.md  orchestration-dev-phases.md  prereleasereport.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: lint.yml  lint.yml.disabled  publish-package.yml  test.yml
Claude/: Claude.md  Claude_Instructions.md  settings.local.json
Claude/Reports/: 2025-06-28_11-24-37_Stage1_LLM_SDK_Refactor.md  2025-06-28_Test_Fixes_Report.md  2025-06-28_Testing_Report.md  Cost_Calculation_Integration_Guide.md
docs/: CHANGELOG.md  INDEX.md  ORCHESTRATION_STATUS.md  README.md  SDK_PROGRESS.md  openai-responses-api.md  orchestration.md  pricing.md
docs/!archive/: EVENTMANAGER_AUDIT.md  LOW_PRIORITY_IMPROVEMENTS.md  PRERELEASE_CLEANUP_IMPLEMENTATION.md  REPO_CLEANUP_FINAL_SUMMARY.md  REPO_CLEANUP_IMPLEMENTATION_PLAN.md  REPO_CLEANUP_PROGRESS.md  sdk-architecture.md
docs/api/: orchestration.md
docs/architecture/: STREAMING_CONSOLIDATION_PLAN.md  capability-reference.md  layered-modular-design.md  metrics.md  orchestration.md  streaming.md
docs/architecture/projects/: sdk-deliverables.md
docs/configuration/: README.md  providers.md  reliability.md  streaming.md
docs/designs/openai-agents-bugfix/: DESIGN.md  QUICK_FIX_GUIDE.md  README.md  SUMMARY.md  TEST_SPECIFICATION.md  VISUAL_DIFF.md
docs/diagrams/: sdk-routing-overview.md
docs/guides/: agent-runtime-integration.md  agents-openai-responses.md  custom-sinks.md  deterministic-generation.md  http-endpoints.md  metrics-setup.md  observability.md  responses-api-advanced.md  streaming-api-migration.md  streaming-events.md  streaming-performance.md  streaming-usage.md  streaming.md  structured-outputs.md
docs/guides/examples/: streaming_with_usage.py
docs/integrations/: openai-agents-integration-plan.md
docs/integrations/openai-agents/: configuration.md  implementation.md  openai-agents-integration-plan.md  overview.md  technical-design.md
docs/nexus/: IMPLEMENTATION_PLAN.md  README.md  agent-sdk-guide.md  diagrams.md  overview.md  product-quality-plan.md  protocol-a2a-v1.md
docs/orchestration/: CLEANUP_SUMMARY.md  CURRENT_STATE.md  PROGRESS_TRACKER.md  README.md  m1-features-guide.md  overview.md  planning-reliability-guide.md
docs/orchestration/.archive/: orchestration-dev-phases.md  orchestration-overview.md  orchestration-plan-legacy.md
docs/reports/: EVENT_FACTORY_IMPLEMENTATION.md  NEXUS_SDK_ARCHITECTURE.md  NEXUS_SDK_MVP_REPORT.md  PRERELEASE_CLEANUP_AUDIT.md  REPO_CLEANUP_AUDIT.md  REPO_CLEANUP_AUDIT_VERIFIED.md
docs/todo/: FASTAPI_SEPARATION_IMPROVEMENTS.md  FASTAPI_SEPARATION_STATUS.md  phase7_preflight_checklist.md
docs/useful/: agents-open-ai.md  metrics.md
docs/user-guides/: agents-openai-responses.md  chat-completions.md
examples/: streaming_with_usage.py
steer_llm_sdk/: LLMConstants.py  __init__.py  __main__.py  cli.py  main.py
steer_llm_sdk/agents/: __init__.py  retry.py
steer_llm_sdk/api/: __init__.py  client.py
steer_llm_sdk/config/: __init__.py  constants.py  model_families.py  models.py
steer_llm_sdk/core/: LAYER_README.md  __init__.py
steer_llm_sdk/http/: __init__.py  api.py
steer_llm_sdk/integrations/: __init__.py
steer_llm_sdk/llm/: __init__.py  capabilities.py  registry.py  router.py
steer_llm_sdk/models/: __init__.py  conversation_types.py  events.py  generation.py  streaming.py
steer_llm_sdk/observability/: __init__.py  collector.py  logging.py  metrics.py  models.py
steer_llm_sdk/orchestration/: __init__.py  base.py  errors.py  options.py  orchestrator.py  orchestrator_v2.py  reliability.py  reliable_orchestrator.py  streaming.py  tool_registry.py
steer_llm_sdk/providers/: __init__.py  base.py  errors.py
steer_llm_sdk/reliability/: __init__.py  budget.py  circuit_breaker.py  enhanced_retry.py  error_classifier.py  errors.py  idempotency.py  retry.py  state.py  streaming_retry.py
steer_llm_sdk/streaming/: __init__.py  adapter.py  aggregator.py  helpers.py  json_handler.py  manager.py  processor.py  types.py
steer_llm_sdk/utils/: __init__.py
tests/: __init__.py  __main__.py  conftest.py  test_aggregator_integration.py  test_event_processor.py  test_provider_json_streaming.py  test_streaming_events_integration.py  test_streaming_with_usage.py  test_usage_aggregator.py
tests/benchmarks/: test_aggregator_performance.py  test_json_handler_performance.py
tests/conformance/: __init__.py  conftest.py  test_error_conformance.py  test_error_mapping.py  test_generation_conformance.py  test_parameter_conformance.py  test_streaming_conformance.py  test_usage_conformance.py
tests/helpers/: mock_exceptions.py  streaming_mocks.py
tests/integration/: __init__.py  test_end_to_end.py  test_event_metadata_consistency.py  test_metrics_e2e.py  test_reliability_integration.py  test_streaming_consolidation.py
tests/reliability/: __init__.py  test_advanced_retry.py  test_circuit_breaker.py  test_error_classifier.py  test_streaming_retry.py
tests/smoke/: test_agents_and_responses_api.py  test_determinism_and_retry.py  test_streaming_with_usage.py
tests/unit/: __init__.py  test_event_manager_factory.py  test_metrics_collector.py  test_metrics_sinks.py  test_model_config_pricing.py  test_pricing_overrides.py  test_providers.py  test_registry.py  test_registry_capabilities.py  test_router.py  test_selector_cost.py
(+150 files in other folders)
