[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steer-llm-sdk"
version = "0.1.0"
description = "Multi-provider LLM integration SDK with normalization and validation"
readme = "README.md"
authors = [{name = "Steer Team", email = "team@steer.ai"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0", 
    "anthropic>=0.18.0",
    "xai-sdk>=0.0.7",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "jinja2>=3.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
local = [
    "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/steer-ai/steer-llm-sdk"
Documentation = "https://docs.steer.ai/llm-sdk"
Repository = "https://github.com/steer-ai/steer-llm-sdk"

[tool.setuptools.packages.find]
include = ["steer_llm_sdk*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"