[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steer-llm-sdk"
version = "0.2.1"
description = "Multi-provider LLM integration SDK with normalization and validation"
readme = "README.md"
authors = [{name = "Max Rossi"}]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0", 
    "anthropic>=0.18.0",
    "xai-sdk>=1.0.0rc1",
    "jinja2>=3.0.0",
    "jsonschema>=4.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/steer-ai/steer-llm-sdk"

[project.scripts]
steer-llm = "steer_llm_sdk.cli:main"

[tool.setuptools.packages.find]
include = ["steer_llm_sdk*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"